--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npx tsc && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"nodemon ./dist/index.js --ignore node_modules\""
+    "dev-server": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"nodemon ./dist/app.js --ignore node_modules\""
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.4",
+    "morgan": "^1.10.0",
     "typescript": "^5.3.3"
   }
 }
