--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.4",
+    "@types/pug": "^2.0.10",
     "morgan": "^1.10.0",
+    "pug": "^3.0.2",
     "typescript": "^5.3.3"
   }
 }
